Banner text complete

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
         <div class="banner">
             <h4>join us</h4>
-            <h1>HIGH QUALITY COURSES </h1>
+            <h1>HIGH QUALITY <br> COURSES </h1>
             <p>Our goal is to make online education work for everyone</p>
             <button class="btn-primary">join us</button>
         </div>
