--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 
 <body>
@@ -33,6 +35,34 @@
         </div>
     </header>
     <main>
+        <div class="cards">
+            <div class="card">
+                <i class="fas fa-laptop-code icon"></i>
+                <h1>Lifetime access</h1>
+                <div class="line"></div>
+                <p>The gradual accumulation of
+                    information about atomic and
+                    small-scale behaviour...</p>
+            </div>
+
+            <div class="card">
+                <i class="fas fa-mobile-alt icon"></i>
+                <h1>training Courses</h1>
+                <div class="line"></div>
+                <p>The gradual accumulation of
+                    information about atomic and
+                    small-scale behaviour...</p>
+            </div>
+
+            <div class="card">
+                <i class="fas fa-cloud icon"></i>
+                <h1>Expert instruction</h1>
+                <div class="line"></div>
+                <p>The gradual accumulation of
+                    information about atomic and
+                    small-scale behaviour...</p>
+            </div>
+        </div>
 
     </main>
     <footer>
