Video section add

--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
     <link rel="stylesheet" href="style.css">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 
-<body>
+<body class="montserrat-normal">
     <header>
         <nav>
             <h1>Brandname</h1>
@@ -64,6 +68,35 @@
             </div>
         </div>
 
+        <div class="learn-section">
+            <div class="learn-img">
+                <img src="./img/col-md-6.png" alt="#">
+            </div>
+            <div class="learn-about">
+                <div class="line"></div>
+                <h1>Watch our Courses</h1>
+                <p>Problems trying to resolve the conflict between <br>
+                    the two major realms of Classical physics:
+                    Newtonian mechanics </p>
+                <button class="learn-btn">learn more</button>
+            </div>
+        </div>
+
+        <div class="video-section">
+            <div class="text-video">
+                <div class="line"></div>
+                <h1>Every Client Matters</h1>
+                <p>Problems trying to resolve the conflict between <br>
+                    the two major realms of Classical physics:
+                    Newtonian mechanics </p>
+                <button class="learn-btn">learn more</button>
+            </div>
+            <div class="video">
+                <img src="./img/Video card.png" alt="#">
+            </div>
+        </div>
+
+        
     </main>
     <footer>
 
