--- a/index.html
+++ b/index.html
@@ -96,7 +96,35 @@
             </div>
         </div>
 
-        
+        <div class="Testimonials">
+            <h4>Testimonials</h4>
+            <h1>Our Popular Courses</h1>
+            <p>Problems trying to resolve the conflict between <br>
+                the two major realms of Classical physics: Newtonian mechanics </p>
+
+            <div class="test-card">
+                <div class="text-card-1">
+                    <img src="./img/testimonial-user-cover-1.png" alt="">
+                    <h4>Slate helps you see how many more days
+                        you need to work to reach your financial
+                        goal for the month and year.</h4>
+                    <p></p>
+                    <h1>Regina Miles</h1>
+                    <h3>Designer</h3>
+                </div>
+                <div class="text-card-1">
+                    <img src="./img/testimonial-user-cover-2.png" alt="">
+                    <h4>Slate helps you see how many more days
+                        you need to work to reach your financial
+                        goal for the month and year.</h4>
+                    <p></p>
+                    <h1>Regina Miles</h1>
+                    <h3>Designer</h3>
+                </div>
+            </div>
+
+
+        </div>
     </main>
     <footer>
 
