--- a/index.html
+++ b/index.html
@@ -122,8 +122,12 @@
                     <h3>Designer</h3>
                 </div>
             </div>
-
-
+        </div>
+        <div class="email-section">
+            <h4>Newsletter</h4>
+            <h1>Our Popular Courses</h1>
+            <p>Problems trying to resolve the conflict between <br>
+                the two major realms of Classical physics: Newtonian mechanics </p>
         </div>
     </main>
     <footer>
