complete input fild

--- a/index.html
+++ b/index.html
@@ -129,6 +129,11 @@
             <p>Problems trying to resolve the conflict between <br>
                 the two major realms of Classical physics: Newtonian mechanics </p>
         </div>
+        <div class="form-container">
+            <label for="email"></label>
+            <input type="email" id="email" name="email" placeholder="Enter your email">
+            <button class="email-btn">Subscribe</button>
+        </div>
     </main>
     <footer>
 
