--- a/index.html
+++ b/index.html
@@ -136,7 +136,54 @@
         </div>
     </main>
     <footer>
+        <div class="footer-info">
+            <div class="company-info">
+                <h1>Company Info</h1>
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Carrier</a></li>
+                    <li><a href="#">We are hiring</a></li>
+                    <li><a href="#">Blog</a></li>
+                </ul>
+            </div>
+            <div class="company-info">
+                <h1>Legal</h1>
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Carrier</a></li>
+                    <li><a href="#">We are hiring</a></li>
+                    <li><a href="#">Blog</a></li>
+                </ul>
+            </div>
+            <div class="company-info">
+                <h1>Features</h1>
+                <ul>
+                    <li><a href="#">Business Marketing</a></li>
+                    <li><a href="#">User Analytic</a></li>
+                    <li><a href="#">Live Chat</a></li>
+                    <li><a href="#">Unlimited Support</a></li>
+                </ul>
+            </div>
+            <div class="company-info">
+                <h1>Resources</h1>
+                <ul>
+                    <li><a href="#">IOS & Android</a></li>
+                    <li><a href="#">Watch a Demo</a></li>
+                    <li><a href="#">Customers</a></li>
+                    <li><a href="#">API</a></li>
+                </ul>
+            </div>
+            <div class="company-info">
+                <h1>Get in touch</h1>
+                <ul>
+                    <li> <i class="fas fa-mobile-alt icon"></i> <a href="#">+123 456 7890</a></li>
+                </ul>
+            </div>
+        </div>
 
+        <div class="copyright">
+            <p>Made With Love By Figmaland All Right Reserved </p>
+        </div>
     </footer>
 </body>
 
